Added the new routes
